# rivelin_move_group_sequence

./: CMakeLists.txt  README.rst  package.xml  setup.py
src/move_group_sequence/: __init_.py  __init__.py
